2006-07-10  Sushma Rai  <rsushma@novell.com>

	* configure.in : Bumped the version to 2.7.4
	* NEWS : Updated

2006-06-22  simon.zheng  <simon.zheng@sun.com>

        Fix for #336453

        * acinclude.m4:
        * configure.in:
        * addressbook/e-book-backend-gal.h:
        update patch for adding SunLDAP library support - a variant of 
	Netscape LDAP.

2006-06-17  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Up intltool requirement to 0.35.

2006-06-15  Jeffrey Stedfast  <fejj@novell.com>

	* camel/camel-stub-marshal.c (do_read): Changed 'n' to be of type
	ssize_t rather than size_t so that we can properly catch '-1'
	return values. Still for bug #179566.

2006-06-13  Sankar P  <psankar@novell.com>

	* Reverting the previous patch. As the LDAP support checking
	is done even if I havent given the --with-sunldap option

2006-06-12  simon.zheng  <simon.zheng@sun.com>

        Fix for #336453

	* acinclude.m4:
	* configure.in:
	* addressbook/e-book-backend-gal.h:
        Add SunLDAP library support - a variant of Netscape LDAP.

2006-06-12  Sushma Rai  <rsushma@novell.com>

	* configure.in : Bumped the version to 2.7.3
	* NEWS : Updated

2006-06-02  Jeffrey Stedfast  <fejj@novell.com>

	* camel/camel-stub-marshal.c (do_read): Patch to my last
	patch. Oops, camel_read() doesn't guarantee that it will read 'n'
	requested bytes (as camel_write() guarantees that it will write
	'n' bytes), it is just a cancellable read() implementation. This
	should fix bug #179566.

2006-05-23  Nancy  <nancy.cai@sun.com>

	Fix #341803
	* storage/Makefile.am:replace "ximian-connector-setup" by
	"exchange-connector-setup"

2006-05-17  Harish Krishnaswamy  <kharish@novell.com>

	* configure.in: Append -DLDAP_DEPRECATED to LDAP_CFLAGS and
	do not overwrite the value.

2006-05-12  Brian Pepple  <bdpepple@gmail.com>

	* po/LINGUAS: New file listing all supported languages.

	* configure.in: Use po/LINGUAS instead of including all languages